--- a/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-small.html
+++ b/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-small.html
@@ -121,7 +121,7 @@
 
                         <!-- ko foreach:formttedCurrentScheduledDateValues -->
 
-                        <div class="schedule-filmstrip-item scheduleLayout" data-bind="style: {display:  $parent.getItemInitialDisplayDialog($index())}">
+                        <div class="schedule-filmstrip-item scheduleLayout">
                             <div>
                                 <div class="dayHeader">
                                     <span data-bind="text: startDate"></span>
