--- a/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
+++ b/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
@@ -9,14 +9,14 @@
                 <div class="oj-flex-item">
                     <div class="oj-flex-item searchFieldWrap">
                         <div id="accordionPage" data-bind="ojComponent: {component: 'ojAccordion'}">
-                              <div id="c1">
+                              <div id="c1" data-bind="ojComponent: {component: 'ojCollapsible', expanded:true}">
                                   <label class="searchTitleBar">Search</label>
                                   <div>
 
                         <div id="simplesearch" class="simplesearchWrap" data-bind="visible:visibleAdvanceSearch()===false">
                             <input class="oj-flex-item inputField"
                                    placeholder="search for active names, stores, jobs"
-                                   id="firstname" data-bind="value: firstNameSearch, ojComponent: {component: 'ojInputText', rootAttributes:{class:'inputFieldWrap'}}"/>
+                                   id="firstname" data-bind="event:{'keydown':preventDefaultFunc},value: firstNameSearch, ojComponent: {component: 'ojInputText', rootAttributes:{class:'inputFieldWrap'}}"/>
                             <div class="searchBtnWrap">
                                 <input class="oj-flex-item oj-button-primary" id="submit" type="submit"
                                        data-bind="ojComponent: {component: 'ojButton',
@@ -28,7 +28,7 @@
 
                         </div>
 
-                        <div id="advanceseach" class="advSearchWrap" data-bind="visible:visibleAdvanceSearch">
+                        <div id="advanceseach" style="background-color: #ffffff; padding: 10px;" data-bind="visible:visibleAdvanceSearch">
                             <div class="oj-flex-item" style="background-color: #fffff; padding: 10px; ">
                                 <span class="advSearchLabel">Advanced Search</span>
                             </div>
@@ -184,7 +184,7 @@
 </div>
 -->
 <!-- Start of the Result template -->
-<div class="oj-flex">
+<div class="oj-flex" id="resultscontainer" data-bind="visible: visibleSearchResult">
     <div class="oj-md-12 oj-flex-item">
         <div class="resultWrapper headerPeople">
 
